# agent-raphai

./: .prettierrc.yml  package.json
app/: layout.tsx
src/api/: agent.py  main.py  message.py  pyproject.toml  service.py  visualizations.py
src/api/prompts/: base_agent.py  common.py  establishment.py  joins_prompt.py  production_prompt.py  sql_agent_prompt.py
src/app/: layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/components/: ChatInterface.tsx  ThemeProvider.tsx
src/dsfr-bootstrap/: ThemeProvider.tsx  index.tsx
