[project]
name = "zlv-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.0",
    "fastapi>=0.115.12",
    "numpy>=2.3.0",
    "openai>=1.86.0",
    "openai-agents>=0.0.17",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "uvicorn>=0.34.3",
]
